--- a/style.css
+++ b/style.css
@@ -1,14 +1,22 @@
 @import url("https://fonts.google.com/specimen/Outfit");
 
+:root {
+	--main-bg-color: hsl(212, 45%, 89%);
+	--secondary-bg-color: hsl(0, 0%, 100%);
+
+	--heading-color: hsl(218, 44%, 22%);
+	--text-color: hsl(216, 15%, 48%);
+}
+
 * {
-	font-family: "Outfit";
+	font-family: "Outfit", sans-serif;
 }
 body {
-	background-color: hsl(212, 45%, 89%);
+	background-color: var(--main-bg-color);
 }
 
 p {
-	font-size: 15px;
+	font-size: 0.9375rem;
 }
 
 .wrapper {
@@ -24,7 +32,7 @@ p {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	background-color: hsl(0, 0%, 100%);
+	background-color: var(--secondary-bg-color);
 	width: min-content;
 	height: min-content;
 	max-width: 320px;
@@ -33,9 +41,10 @@ p {
 	margin: auto;
 	border-radius: 20px;
 	gap: 24px;
+	box-shadow: 0px 2px 10px hsl(216, 15%, 48%);
 }
 
-#qr {
+.qr {
 	width: 288px;
 	height: 288px;
 	margin: auto;
@@ -45,7 +54,7 @@ p {
 .text {
 	display: flex;
 	flex-direction: column;
-	font-family: "Outfit";
+	font-family: "Outfit", sans-serif;
 	text-align: center;
 	width: fit-content;
 	max-width: 288px;
@@ -56,8 +65,8 @@ p {
 }
 
 .text h1 {
-	color: hsl(218, 44%, 22%);
-	font-size: 22px;
+	color: var(--heading-color);
+	font-size: 1.375rem;
 	width: fit-content;
 	max-width: 256px;
 	height: min-content;
@@ -66,8 +75,8 @@ p {
 }
 
 .text p {
-	color: hsl(216, 15%, 48%);
-	font-size: 15px;
+	color: var(--text-color);
+	font-size: 0.9375rem;
 	width: fit-content;
 	max-width: 256px;
 	height: min-content;
@@ -77,7 +86,7 @@ p {
 }
 
 .attribution {
-	font-size: 11px;
+	font-size: 0.6875rem;
 	text-align: center;
 }
 .attribution a {
