--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
 :root {
 	--main-bg-color: hsl(212, 45%, 89%);
 	--secondary-bg-color: hsl(0, 0%, 100%);
-
 	--heading-color: hsl(218, 44%, 22%);
 	--text-color: hsl(216, 15%, 48%);
 }
@@ -24,7 +23,8 @@ p {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	height: 100vh;
+	height: 90vh;
+	margin: auto;
 }
 
 .container {
@@ -41,7 +41,7 @@ p {
 	margin: auto;
 	border-radius: 20px;
 	gap: 24px;
-	box-shadow: 0px 2px 10px hsl(216, 15%, 48%);
+	box-shadow: 0px 2px 20px -10px hsl(216, 15%, 48%);
 }
 
 img {
